Minor optimisation